# bind9

./: .gitlab-ci.yml  CHANGES  Makefile.am  config.h.in  configure  configure.ac
.gitlab/issue_templates/: CVE.md
doc/arm/: Makefile.am  dnssec.inc.rst  logging-categories.inc.rst  platforms.inc.rst  reference.rst
doc/design/: qp-trie.md
doc/dnssec-guide/: signing.rst
doc/man/: Makefile.am  dnssec-keygen.1in  dnssec-signzone.1in  named-checkconf.1in  named.8in  named.conf.5in
doc/misc/: Makefile.am  dnssec-policy.default.conf  dnssec-policy.grammar.rst  forward.zoneopt  key-store.grammar.rst  mirror.zoneopt  options  options.active  primary.zoneopt  redirect.zoneopt  secondary.zoneopt  static-stub.zoneopt  stub.zoneopt
doc/notes/: notes-current.rst
fuzz/: dns_qpkey_name.c  fuzz.h
lib/bind9/: check.c
lib/dns/: Makefile.am  acl.c  adb.c  badcache.c  byaddr.c  cache.c  catz.c  client.c  compress.c  diff.c  dispatch.c  dns64.c  dnsrps.c  dnssec.c  dnstap.c  dst_api.c  dst_internal.h  dst_openssl.h  dst_parse.c  dst_parse.h  dyndb.c  fixedname.c  forward.c  gen.c  gssapi_link.c  hmac_link.c  ipkeylist.c  iptable.c  journal.c  kasp.c  key.c  keymgr.c  keystore.c  keytable.c  log.c  lookup.c  master.c  masterdump.c  message.c  name.c  (+43 more)
lib/irs/: resconf.c
lib/isc/: Makefile.am  app.c  base32.c  base64.c  buffer.c  commandline.c  counter.c  dir.c  hash.c  heap.c  hex.c  ht.c  httpd.c  interfaceiter.c  jemalloc_shim.h  lex.c  log.c  loop.c  managers.c  mem.c  net.c  netaddr.c  openssl_shim.h  quota.c  (+19 more)
util/: check-categories.sh  models.c  run-clang-tidy.py
(+333 files in other folders)
